スムーススクロール

--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
                 検索する
               </button>
             </div>
+            <div id="page-top">
+              <a href="#"></a>
+            </div>
           </form>
         </div>
       </div>
